feat: Add static file serving and HTML structure for WhatsApp simulator
- Implemented server using Express to serve static files from the 'dist' directory.
- Created index.html with basic structure and linked CSS and JS assets.
- Added Vite logo SVG for favicon.
- Included generated CSS file for styling the application.

--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,7 @@ transcricoes/
 
 # --- Node.js / TypeScript ---
 # Pasta de dependências do npm/yarn.
-agent-handler-service/node_modules/
+node_modules/
 
 # Código JavaScript compilado a partir do TypeScript.
 agent-handler-service/dist/
